misc.txt
Anki 25.02.4 (a5c33ad0)  (ao)
Python 3.9.18 Qt 6.6.2 PyQt 6.6.1
Platform: Windows-10-10.0.26100

Unknown error===Add-ons (active)===
(add-on provided name [Add-on folder, installed at, version, is config changed])
'' ['myaddon', 0, 'None', '']
Anki Leaderboard - Compete with friends to boost motivation Custom by Shige ['175794613', 2025-05-14T23:23, 'None', mod]
Ankimon by Unlucky-life ['1908235722', 2024-05-16T16:07, 'None', '']
FSRS Helper Postpone  Advance  Load Balance  Easy Days  Disperse Siblings ['759844606', 2025-05-06T05:25, 'None', mod]
Review Heatmap ['1771074083', 2022-06-30T02:43, 'None', '']

===IDs of active AnkiWeb add-ons===
175794613 1771074083 1908235722 759844606

===Add-ons (inactive)===
(add-on provided name [Add-on folder, installed at, version, is config changed])

Anki 25.02.4 (a5c33ad0)  (ao)
Python 3.9.18 Qt 6.6.2 PyQt 6.6.1
Platform: Windows-10-10.0.26100

When loading make-anki-beautiful:
Traceback (most recent call last):
  File "aqt.addons", line 250, in loadAddons
  File "C:\Users\dsingh\AppData\Roaming\Anki2\addons21\make-anki-beautiful\__init__.py", line 3, in <module>
    from corefuncs import *
ModuleNotFoundError: No module named 'corefuncs'

Anki 25.02.4 (a5c33ad0)  (ao)
Python 3.9.18 Qt 6.6.2 PyQt 6.6.1
Platform: Windows-10-10.0.26100

Unknown error===Add-ons (active)===
(add-on provided name [Add-on folder, installed at, version, is config changed])
'' ['make-anki-beautiful', 0, 'None', '']
Anki Leaderboard - Compete with friends to boost motivation Custom by Shige ['175794613', 2025-05-14T23:23, 'None', mod]
Ankimon by Unlucky-life ['1908235722', 2024-05-16T16:07, 'None', '']
FSRS Helper Postpone  Advance  Load Balance  Easy Days  Disperse Siblings ['759844606', 2025-05-06T05:25, 'None', mod]
Review Heatmap ['1771074083', 2022-06-30T02:43, 'None', '']

===IDs of active AnkiWeb add-ons===
175794613 1771074083 1908235722 759844606

===Add-ons (inactive)===
(add-on provided name [Add-on folder, installed at, version, is config changed])

Anki 25.02.5 (29192d15)  (ao)
Python 3.9.18 Qt 6.6.2 PyQt 6.6.1
Platform: Windows-10-10.0.26100

When loading make-anki-beautiful:
Traceback (most recent call last):
  File "aqt.addons", line 250, in loadAddons
  File "C:\Users\dsingh\AppData\Roaming\Anki2\addons21\make-anki-beautiful\__init__.py", line 1, in <module>
    from .initialise_ui_components.init_ui import *
  File "C:\Users\dsingh\AppData\Roaming\Anki2\addons21\make-anki-beautiful\initialise_ui_components\init_ui.py", line 69
    """
       ^
SyntaxError: f-string expression part cannot include a backslash

Anki 25.02.5 (29192d15)  (ao)
Python 3.9.18 Qt 6.6.2 PyQt 6.6.1
Platform: Windows-10-10.0.26100

Traceback (most recent call last):
  File "C:\Users\dsingh\AppData\Roaming\Anki2\addons21\make-anki-beautiful\initialise_ui_components\init_ui.py", line 21, in <lambda>
    action = lambda: func(*args, **kwargs)
  File "C:\Users\dsingh\AppData\Roaming\Anki2\addons21\make-anki-beautiful\initialise_ui_components\init_ui.py", line 45, in wallpaper
    if file_dialog.exec_():
AttributeError: 'QFileDialog' object has no attribute 'exec_'

===Add-ons (active)===
(add-on provided name [Add-on folder, installed at, version, is config changed])
'' ['make-anki-beautiful', 0, 'None', '']
Anki Leaderboard - Compete with friends to boost motivation Custom by Shige ['175794613', 2025-05-14T23:23, 'None', mod]
Ankimon by Unlucky-life ['1908235722', 2024-05-16T16:07, 'None', '']
FSRS Helper Postpone  Advance  Load Balance  Easy Days  Disperse Siblings ['759844606', 2025-05-27T02:35, 'None', mod]
Review Heatmap ['1771074083', 2022-06-30T02:43, 'None', '']

===IDs of active AnkiWeb add-ons===
175794613 1771074083 1908235722 759844606

===Add-ons (inactive)===
(add-on provided name [Add-on folder, installed at, version, is config changed])

Anki 25.02.5 (29192d15)  (ao)
Python 3.9.18 Qt 6.6.2 PyQt 6.6.1
Platform: Windows-10-10.0.26100

When loading make-anki-beautiful:
Traceback (most recent call last):
  File "aqt.addons", line 250, in loadAddons
  File "C:\Users\dsingh\AppData\Roaming\Anki2\addons21\make-anki-beautiful\__init__.py", line 9, in <module>
    main()
  File "C:\Users\dsingh\AppData\Roaming\Anki2\addons21\make-anki-beautiful\__init__.py", line 7, in main
    initui(menu)
  File "C:\Users\dsingh\AppData\Roaming\Anki2\addons21\make-anki-beautiful\initialise_ui_components\init_ui.py", line 85, in initui
    initwallpaper()
  File "C:\Users\dsingh\AppData\Roaming\Anki2\addons21\make-anki-beautiful\initialise_ui_components\init_ui.py", line 48, in initwallpaper
    config_dir = os.path.join(mw.pm.profileFolder(), "make_anki_beautiful")
  File "aqt.profiles", line 307, in profileFolder
  File "ntpath", line 117, in join
  File "genericpath", line 152, in _check_arg_types
TypeError: join() argument must be str, bytes, or os.PathLike object, not 'NoneType'

Anki 25.02.5 (29192d15)  (ao)
Python 3.9.18 Qt 6.6.2 PyQt 6.6.1
Platform: Windows-10-10.0.26100

When loading make-anki-beautiful:
Traceback (most recent call last):
  File "aqt.addons", line 250, in loadAddons
  File "C:\Users\dsingh\AppData\Roaming\Anki2\addons21\make-anki-beautiful\__init__.py", line 9, in <module>
    main()
  File "C:\Users\dsingh\AppData\Roaming\Anki2\addons21\make-anki-beautiful\__init__.py", line 7, in main
    initui(menu)
  File "C:\Users\dsingh\AppData\Roaming\Anki2\addons21\make-anki-beautiful\initialise_ui_components\init_ui.py", line 86, in initui
    initwallpaper()
  File "C:\Users\dsingh\AppData\Roaming\Anki2\addons21\make-anki-beautiful\initialise_ui_components\init_ui.py", line 48, in initwallpaper
    config_dir = os.path.join(mw.pm.profileFolder(), "make_anki_beautiful")
  File "aqt.profiles", line 307, in profileFolder
  File "ntpath", line 117, in join
  File "genericpath", line 152, in _check_arg_types
TypeError: join() argument must be str, bytes, or os.PathLike object, not 'NoneType'



